@@ -1,10 +1,9 @@
 import com.google.gson.annotations.SerializedName;
 import com.mojang.logging.LogUtils;
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import org.apache.commons.io.FileUtils;
+import java.nio.file.Files;
+import java.nio.file.NoSuchFileException;
+import java.nio.file.Path;
 import org.slf4j.Logger;
 
 public class emd {
@@ -21,15 +20,15 @@ public class emd {
    }
 
    public static emd.a b() {
-      File $$0 = c();
+      Path $$0 = c();
 
       try {
-         String $$1 = FileUtils.readFileToString($$0, StandardCharsets.UTF_8);
+         String $$1 = Files.readString($$0, StandardCharsets.UTF_8);
          emd.a $$2 = b.a($$1, emd.a.class);
          if ($$2 != null) {
             return $$2;
          }
-      } catch (FileNotFoundException var3) {
+      } catch (NoSuchFileException var3) {
       } catch (Exception var4) {
          c.warn("Failed to read Realms storage {}", $$0, var4);
       }
@@ -38,16 +37,16 @@ public class emd {
    }
 
    public static void b(emd.a $$0) {
-      File $$1 = c();
+      Path $$1 = c();
 
       try {
-         FileUtils.writeStringToFile($$1, b.a($$0), StandardCharsets.UTF_8);
-      } catch (IOException var3) {
+         Files.writeString($$1, b.a($$0), StandardCharsets.UTF_8);
+      } catch (Exception var3) {
       }
    }
 
-   private static File c() {
-      return new File(enn.N().p, "realms_persistence.json");
+   private static Path c() {
+      return enn.N().p.toPath().resolve("realms_persistence.json");
    }
 
    public static class a implements ejz {
